--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,24 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  flutter_riverpod: ^2.6.1
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  rename: ^3.0.2
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21
+
 flutter:
   uses-material-design: true
-
+  assets:
+    - assets/images/
