--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   path_provider: ^2.1.5
   rename: ^3.0.2
   flutter_launcher_icons: ^0.14.2
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +26,8 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/icon.png"
+  adaptive_icon_foreground: "assets/images/icon.png" 
+  adaptive_icon_background: "#FFFFFFFF" 
   min_sdk_android: 21
 
 flutter:
