--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  intl: ^0.20.1
+  fluttertoast: ^8.2.10
 
 dev_dependencies:
   flutter_test:
